--- a/.cproject
+++ b/.cproject
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<?fileVersion 4.0.0?><cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
+<?fileVersion 4.0.0?>
+
+<cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
 	<storageModule moduleId="org.eclipse.cdt.core.settings">
 		<cconfiguration id="cdt.managedbuild.config.gnu.exe.debug.2142266329">
 			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="cdt.managedbuild.config.gnu.exe.debug.2142266329" moduleId="org.eclipse.cdt.core.settings" name="Debug">
@@ -69,7 +71,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="scripts_old/|test/|scripts/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
+						<entry excluding="src/Analysers/HitFitAnalyser.cpp|interface/Analysers/HitFitAnalyser.h|src/HitFit|scripts_old/|test/|scripts/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -129,8 +131,6 @@
 									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="boost_python"/>
 									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="boost_program_options"/>
 									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="python2.7"/>
-									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="CLHEP"/>
-									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="TopQuarkAnalysis"/>
 									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="TreePlayer"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.2027799472" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
@@ -145,7 +145,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="scripts_old/|test/|scripts/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
+						<entry excluding="src/Analysers/HitFitAnalyser.cpp|interface/Analysers/HitFitAnalyser.h|src/HitFit|scripts_old/|test/|scripts/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -221,7 +221,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="scripts_old/|scripts/|bin/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
+						<entry excluding="src/Analysers/HitFitAnalyser.cpp|interface/Analysers/HitFitAnalyser.h|src/HitFit|scripts_old/|scripts/|bin/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -299,7 +299,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="scripts_old/|test/|scripts/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
+						<entry excluding="src/Analysers/HitFitAnalyser.cpp|interface/Analysers/HitFitAnalyser.h|src/HitFit|scripts_old/|test/|scripts/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
