--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,9 @@
 *.py[cod]
 *.log
-Debug/AnalysisSoftware
-Debug/bin/
-Debug/src/
-Profile/AnalysisSoftware
-Profile/bin/
-Profile/src/
-Release/AnalysisSoftware
-Release/bin/
-Release/src/
+Debug/
+Profile/
+Release/
+CUTE_Tests/
 *_TESTING.root
 Root_IO_Performance.root
 .settings/
