--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,7 @@ env:
 before_install: source ci/before_install.sh
 install: source ci/install.sh
 script: bash ci/test.sh
+cache:
+  directories: # also works for files ;)
+  - root_5-34-18_python_2.7.tar.gz
+  - root_v6-00-00_python_2.7.tar.gz
