--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,13 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)
 set(PROJECT_NAME_STR AnalysisSoftware)
 PROJECT(${PROJECT_NAME_STR})
+set(PROJECT_LIB_NAME BristolAnalysisTools)
 
 if((CMAKE_SYSTEM_PROCESSOR MATCHES "i386") AND (CMAKE_SIZEOF_VOID_P EQUAL 8) AND (APPLE))
 	set(CMAKE_OSX_ARCHITECTURES "x86_64")
-	MESSAGE(STATUS "Building Bristol Analysis Software for ${CMAKE_OSX_ARCHITECTURES} architecture on ${CMAKE_SYSTEM_NAME}")
+	MESSAGE(STATUS "Building ${PROJECT_NAME_STR} for ${CMAKE_OSX_ARCHITECTURES} architecture on ${CMAKE_SYSTEM_NAME}")
 else()
-	MESSAGE(STATUS "Building Bristol Analysis Software on ${CMAKE_SYSTEM_NAME}")
+	MESSAGE(STATUS "Building ${PROJECT_NAME_STR} on ${CMAKE_SYSTEM_NAME}")
 endif()
 MESSAGE(STATUS "Using compiler ${CMAKE_CXX_COMPILER_ID}")
 # get ROOT
