--- a/condor/job.description.template
+++ b/condor/job.description.template
@@ -4,6 +4,7 @@ Output = BAT.job.$(cluster).$(process).out
 Error = BAT.job.$(cluster).$(process).err
 Log = BAT.job.$(cluster).$(process).log
 arguments = --process $(process) %other_params%
+requirements = Name != "slot1@hd-37-07.dice.priv"
 
 transfer_input_files = Analysis.tar
 should_transfer_files = YES
